explorer tune baseline timeout

--- a/explorer_sensor/Dockerfile
+++ b/explorer_sensor/Dockerfile
@@ -1,2 +1,8 @@
-FROM alexellis2/python-gpio-arm:armv6
+FROM alexellis2/python-gpio-arm:v6-dev
+RUN pip2 install redis
+RUN pip2 install explorerhat
+RUN sudo apt-get -qy install python-smbus
 
+ADD *.py ./
+
+CMD ["sudo", "-E", "python2", "app.py"]
