--- a/envirophat_sensor/Dockerfile
+++ b/envirophat_sensor/Dockerfile
@@ -7,6 +7,8 @@ RUN git clone https://github.com/adafruit/Adafruit_Python_GPIO.git
 RUN cd Adafruit_Python_GPIO && \
  sudo python setup.py install
 
+RUN git clone https://github.com/pimoroni/adxl345-python
+
 RUN git clone https://github.com/adafruit/Adafruit_Python_BME280
 RUN mv Adafruit_Python_BME280/* ./
 ADD ./*.py ./
