--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,13 @@
 version: "2.0"
 services:
+
+  redis:
+    image: alexellis2/redis-arm:v6
+    ports:
+      - 6379/TCP
+    networks:
+      - frontend
+
   unicorndashboard:
     build:
       context: "./multi_dashboard/"
@@ -7,8 +15,10 @@ services:
       - frontend
     privileged: true
     environment:
-#      - "constraint:dashboard==1"
       - "constraint:demo.dashboard==1"
+    depends_on:
+      - redis
+
   sensor:
     build:
       context: "./envirophat_sensor/"
@@ -18,12 +28,8 @@ services:
     environment:
       - "affinity:container!=datacentersensor_sensor_*"
       - "constraint:sensor==1"
-  redis:
-    image: alexellis2/redis-arm:v6
-    ports:
-      - 6379/TCP
-    networks:
-      - frontend
+    depends_on:
+      - redis
 
 networks:
   frontend:
