--- a/envirophat_sensor/Dockerfile
+++ b/envirophat_sensor/Dockerfile
@@ -13,4 +13,8 @@ RUN git clone https://github.com/adafruit/Adafruit_Python_BME280
 RUN mv Adafruit_Python_BME280/* ./
 ADD ./*.py ./
 
+RUN git clone https://github.com/adafruit/Adafruit_DotStar_Pi
+RUN cd Adafruit_DotStar_Pi && \
+  sudo python setup.py install
+
 CMD ["sudo", "-E", "python", "app.py"]
