--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     privileged: true
     environment:
       - "constraint:demo.dashboard==1"
+      - QUIET=True
     depends_on:
       - redis
 
