--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - 6379/TCP
     networks:
       - frontend
+    environment:
+      - "constraint:demo.dashboard==1"
 
   unicorndashboard:
     build:
