--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@ services:
     environment:
       - "constraint:demo.dashboard==1"
       - QUIET=True
+    ports:
+      - "5000:5000"
     depends_on:
       - redis
 
