--- a/webdashboard/Dockerfile
+++ b/webdashboard/Dockerfile
@@ -1,4 +1,5 @@
 FROM alexellis2/python-gpio-flask:v6
+WORKDIR /root/
 
 RUN sudo pip install redis
 
@@ -6,4 +7,4 @@ ADD ./*.py ./
 
 EXPOSE 5000
 
-CMD ["sudo", "-E", "python", "app.py"]
+CMD ["python", "app.py"]
