--- a/webdashboard/Dockerfile
+++ b/webdashboard/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /root/
 RUN sudo pip install redis
 
 ADD ./*.py ./
-
+ADD ./templates/ ./templates/
 EXPOSE 5000
 
 CMD ["python", "app.py"]
